# mt_MPC

./: README.md
mpc_s1000_controller/: CMakeLists.txt  package.xml
mpc_s1000_controller/include/: polytope_functions.h
mpc_s1000_controller/launch/: mpc_s1000_controller.launch  mpc_s1000_controller_explor_targ.launch  mpc_s1000_controller_noOA.launch  mpc_s1000_parameters.launch  s1000_mpc_startup.launch  s1000_mpc_startup_explor_targ.launch  s1000_mpc_startup_noOA.launch  s1000_mpc_startup_rc_targ.launch
mpc_s1000_controller/msg/: PolytopeMatrices.msg  PolytopeMatricesStamped.msg
mpc_s1000_controller/src/: data_inputvar.mat  mtMPC_exploration_target.py  mtMPC_inputVar.py  mtMPC_rc_target_generator.cpp  mtMPC_target_generator.py  polytope_functions.cpp  polytope_matrices_generation.cpp  polytope_matrices_viewer.cpp
mpc_s1000_controller/src/old-bkp/: data.mat  data_filter.mat  data_test1.mat  mtMPC.py  mtMPC_filter.py  mtMPC_target_generator_switch.py  mtMPC_without_slack.py  polytope_matrices_generation -bkp2.cpp  polytope_matrices_generation-bkp.cpp
resources/project/: Main.m  Matrices_acc_mtMPC.m  Traj_matrices.m  Traj_matrices_mtMPC.m  mt_MPC.m  test.m
resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
s1000_interface/: CMakeLists.txt  package.xml
s1000_interface/launch/: gbeam_s1000.launch  gbeam_s1000_parameters.launch  s1000_interface.launch  s1000_interface_mpc.launch  s1000_interface_test_noOA.launch  s1000_oa_test.launch
s1000_interface/src/: auto_flight.cpp  bag_recorder.cpp  gbeam_flight_manager.cpp  lidar_merger.cpp  mpc_flight_manager.cpp  obstacle_avoidance.cpp  position_controller.cpp  position_controller_mpc.cpp  rc_position_controller.cpp  tf2_publisher.cpp
